netpol/whitelist-podcidr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whitelist-podcidr
  namespace: default
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
